public class CodigoManga {

    private String isbn;

    public CodigoManga(String isbn){
        this.isbn = isbn;
    }

    public String getIsbn(){
        return isbn;
    }
}
